Added Quarry and Recipes

--- a/src/main/resources/assets/dharma/lang/en_us.json
+++ b/src/main/resources/assets/dharma/lang/en_us.json
@@ -15,5 +15,6 @@
 	"item.dharma.ember_coated_chestplate": "Ember Coated Iron Chestplate",
 	"item.dharma.ember_coated_leggings": "Ember Coated Iron Leggings",
 	"item.dharma.ember_coated_boots": "Ember Coated Iron Boots",
-	"block.dharma.custom_block": "Custom Block"
+	"block.dharma.custom_block": "Custom Block",
+	"block.dharma.quarry": "Quarry"
 }
