Added Valar biome.

--- a/src/main/resources/assets/dharma/lang/en_us.json
+++ b/src/main/resources/assets/dharma/lang/en_us.json
@@ -20,5 +20,6 @@
 	"block.dharma.ember_stairs": "Ember Stairs",
 	"block.dharma.ember_fence": "Ember Fence",
 	"block.dharma.ember_button": "Ember Button",
-	"block.dharma.ember_pressure_plate": "Ember Pressure Plate"
+	"block.dharma.ember_pressure_plate": "Ember Pressure Plate",
+	"biome.dharma.valar": "Valar"
 }
